--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "@vitejs/plugin-react": "^4.4.1",
